This is a test to: 1) Create a branch in git/github for the task page 2) Commiting/pushing changes to git/github

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnBoardingSlider2">
         <activity
+            android:name=".TaskActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
