Added clickable on home page to advance to lot page temporarily. Added Lot page with clickables that should open the card samples from glass page on google

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnBoardingSlider2">
         <activity
-            android:name=".HomeActivity"
+            android:name=".LotActivity"
             android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
