added gesture library sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "On Boarding Slider 2"
 include ':app'
+include ':GestureSampleLibrary'
+include ':gesturesamplelibrary'
+include ':main'
